--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "capstone-project-2",
-  "homepage": "https://anil70530.github.io/aem-react",
+  "homepage": "https://sharmasachinn.github.io/AEM-Assignment-2/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
